<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Task Manager</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tues</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thurs</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="add_button">Create</string>
    <string name="remove_button">-</string>
    <string name="prev_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="which_month">Month</string>
    <string name="details_title_text">Event Title</string>
    <string name="details_time_text">Start Time - End Time</string>
    <string name="details_loc_text">Address</string>
    <string name="details_note_text">Note/Details</string>
    <string name="submit_button">Submit</string>
    <string name="done_button">Done</string>
    <string name="refresh_button">Refresh</string>
    <string name="action_today">Today</string>
    <string name="event_title">Enter title of event</string>
    <string name="all_day">All Day</string>
    <string name="event_location">Add location</string>
    <string name="event_people">Invite people</string>
    <string name="event_note">Add note</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="request_event_name">Please enter title of event.</string>
    <string name="delete_event">Delete</string>
    <string name="edit_button">Edit</string>
</resources>
