<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.utoronto.timemng.app.TaskListActivity" >

    <item android:id="@+id/action_prev"
          android:title="@string/prev_button"
          android:icon="@drawable/ic_action_previous_item"
          android:showAsAction="always"/>
    <item android:id="@+id/action_today"
          android:title="@string/action_today"
          android:icon="@drawable/ic_action_go_to_today"
          android:showAsAction="always"/>
    <item android:id="@+id/action_next"
          android:title="@string/next_button"
          android:icon="@drawable/ic_action_next_item"
          android:showAsAction="always"/>
    <item android:id="@+id/action_new"
          android:title="@string/add_button"
          android:icon="@drawable/ic_action_new"
          android:showAsAction="always" />
</menu>