<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.utoronto.timemng.app.CoreActivity" >
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/core_action_prev"
          android:title="@string/prev_button"
          android:icon="@drawable/ic_action_previous_item"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/core_action_next"
          android:title="@string/next_button"
          android:icon="@drawable/ic_action_next_item"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/action_refresh"
          android:title="@string/refresh_button"
          android:icon="@drawable/ic_action_refresh"
          android:showAsAction="ifRoom"/>
</menu>
