<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="6dp"
              android:id="@+id/event_details_fragment"
              android:layout_gravity="top">
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/new_event_left"
                      android:layout_width="40dp"
                      android:layout_height="fill_parent"
                      android:orientation="vertical">

            <ImageView android:id="@+id/event_title_img"
                       android:layout_width="fill_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/ic_action_event"/>

            <ImageView android:id="@+id/event_time_img"
                       android:layout_width="fill_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/ic_action_time"
                       android:layout_marginTop="15dp"/>
            <ImageView android:id="@+id/event_location_img"
                       android:layout_width="fill_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/ic_action_place"
                       android:layout_marginTop="125dp"/>
            <ImageView android:id="@+id/event_add_people_img"
                       android:layout_width="fill_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/ic_action_add_group"
                       android:layout_marginTop="15dp"/>
            <ImageView android:id="@+id/event_add_note_img"
                       android:layout_width="fill_parent"
                       android:layout_height="40dp"
                       android:background="@drawable/ic_action_view_as_list"
                       android:layout_marginTop="15dp"/>
        </LinearLayout>

        <LinearLayout android:id="@+id/new_event_mid"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical">

            <EditText android:id="@+id/event_title_input"
                      android:layout_width="fill_parent"
                      android:inputType="textEmailSubject"
                      android:hint="@string/event_title"
                      android:layout_height="40dp"/>
            <CheckBox android:id="@+id/checkbox_all_day"
                      android:layout_width="fill_parent"
                      android:text="@string/all_day"
                      android:layout_height="40dp"
                      android:onClick="onCheckBoxClicked"
                      android:layout_marginTop="15dp"/>
            <LinearLayout android:id="@+id/start_date_and_time"
                          android:layout_width="fill_parent"
                          android:layout_height="40dp"
                          android:layout_marginTop="15dp"
                          android:orientation="horizontal">
                <TextView android:id="@+id/start_date"
                          android:layout_width="0dp"
                          android:layout_height="40dp"
                          android:layout_weight="2"
                          android:text="Sunday, 23 Nov 2014"
                          android:onClick="onStartDateClicked"/>
                <TextView android:id="@+id/event_start_time"
                          android:layout_width="0dp"
                          android:layout_height="40dp"
                          android:layout_weight="1"
                          android:text="04:00"
                          android:onClick="onStartTimeClicked"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/end_date_and_time"
                          android:layout_width="fill_parent"
                          android:layout_height="40dp"
                          android:layout_marginTop="15dp"
                          android:orientation="horizontal">
                <TextView android:id="@+id/end_date"
                          android:layout_width="0dp"
                          android:layout_height="40dp"
                          android:layout_weight="2"
                          android:text="Sunday, 23 Nov 2014"
                          android:onClick="onEndDateClicked"/>
                <TextView android:id="@+id/event_end_time"
                          android:layout_width="0dp"
                          android:layout_height="40dp"
                          android:layout_weight="1"
                          android:text="04:00"
                          android:onClick="onEndTimeClicked"/>
            </LinearLayout>
            <EditText android:id="@+id/event_location_input"
                      android:layout_width="fill_parent"
                      android:inputType="textPostalAddress"
                      android:hint="@string/event_location"
                      android:layout_height="40dp"
                      android:layout_marginTop="15dp"/>
            <EditText android:id="@+id/event_add_ppl_input"
                      android:layout_width="fill_parent"
                      android:inputType="textEmailAddress"
                      android:hint="@string/event_people"
                      android:layout_height="40dp"
                      android:layout_marginTop="15dp"/>
            <EditText android:id="@+id/event_note_input"
                      android:layout_width="fill_parent"
                      android:inputType="textMultiLine|textCapSentences"
                      android:hint="@string/event_note"
                      android:layout_height="40dp"
                      android:layout_marginTop="15dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>